# Jazzy

./: .gitignore  Cargo.toml  UML.mdj
cargo/jazzy_render/: Cargo.toml
cargo/jazzy_render/src/: lib.rs  surface.rs  window.rs
crates/jazzy_app/: Cargo.toml
crates/jazzy_app/src/: app.rs
crates/jazzy_ecs/: Cargo.toml
crates/jazzy_ecs/src/: lib.rs  systems.rs
crates/jazzy_render/: Cargo.toml
crates/jazzy_render/src/: learn.rs  lib.rs  render.rs  render_layout.rs  surface.rs  window.rs
examples/: window_example.rs
src/: lib.rs
