[package]
name = "jazzy_render"
version = "0.1.0"
edition = "2021"

[dependencies]
jazzy_ecs = { path = "../jazzy_ecs" }

wgpu = "0.14"
bytemuck = { version = "1.12.3", features = ["derive"]}
winit = "0.27"
pollster = "0.2"
env_logger = "0.9"
log = "0.4"

[dependencies.image]
version = "0.24.5"
default-features = false
features = ["png", "jpeg"]