[package]
name = "jazzy_render"
version = "0.1.0"
edition = "2021"

[dependencies]
jazzy_ecs = { path = "../jazzy_ecs" }

nalgebra = "0.31.4"

wgpu = "0.14"
winit = "0.27"

bytemuck = { version = "1.12.3", features = ["derive"]}
pollster = "0.2"
anyhow = "1.0.68"

log = "0.4"

[dev-dependencies]
env_logger = "0.9.0"

[dependencies.image]
version = "0.24.5"
default-features = false
features = ["png", "jpeg"]